# qwen3-tts-cuda-graphs

./: .gitignore  BLOG.md  README.md  baseline_bench.py  bench_portable.sh  bench_ttft.py  bench_v5.py  benchmark.sh  fast_generate_v5.py  manual_cudagraph_predictor.py  manual_cudagraph_talker.py  pyproject.toml  setup.sh  triton_compat.py
demo/: index.html
examples/: server.py
faster_qwen3_tts/: model.py  predictor_graph.py  streaming.py  talker_graph.py
qwen3_tts_cuda_graphs/: model.py
